final_project/security_groups.tf
resource "aws_security_group" "mdp-access-openvpn-sg" {
  name        = "mdp-access-from-openvpn"
  description = "Allow traffic from OpenVPN instance"
  vpc_id      = aws_vpc.mdp-vpc.id 

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    security_groups = [aws_security_group.elsys_mrejari_openvpn_sg.id]
  }

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

   tags = {
    Name = "mdp-access-openvpn-sg"
  }
}

resource "aws_security_group" "elsys_mrejari_openvpn_sg" {
  name        = "mdp-openvpn-sg"
  description = "Security group for OpenVPN instance to allow global access"
  vpc_id      = aws_vpc.mdp-vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "mdp-openvpn-sg"
  }
}
